google tag added

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,15 @@
       content="Web site created using create-react-app"
     />
    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WCFCY69SHC"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-WCFCY69SHC');
+    </script>
 
     <title>Waethar</title>
   </head>
