--- a/public/index.html
+++ b/public/index.html
@@ -2,21 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-   
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-   
+    <meta name="description" content="Web site created using create-react-app" />
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WCFCY69SHC"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-    
       gtag('config', 'G-WCFCY69SHC');
     </script>
 
@@ -26,7 +21,6 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3060343423616753"
-     crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-3060343423616753">
   </body>
 </html>
